--- a/js-numerals/numeric-converter-app/views/index.hbs
+++ b/js-numerals/numeric-converter-app/views/index.hbs
@@ -1,1 +1,9 @@
-<p>Sajt</p>
+<div class="conatiner">
+
+   <form id="form">
+      <input class="conatiner__input" type="number" placeholder="Write a number">
+      <button class="conatiner__button" type="submit">Submit</button>
+   </form>
+
+   <div class="conatiner__number-box" id="nameOfSubmittedNumber"></div>
+</div>
