--- a/js-numerals/numeric-converter-app/public/stylesheets/style.css
+++ b/js-numerals/numeric-converter-app/public/stylesheets/style.css
@@ -22,9 +22,8 @@ body {
   background-color: #fff; }
 
 /** Styles */
-input {
-  padding: 1rem 3rem; }
-
 .container {
   width: 100%;
   height: 100%; }
+  .container__input {
+    padding: 1rem 3rem; }
