--- a/js-numerals/numeric-converter-app/views/index.hbs
+++ b/js-numerals/numeric-converter-app/views/index.hbs
@@ -1,7 +1,7 @@
 <div class="conatiner">
 
    <form id="form">
-      <input class="conatiner__input" type="number" placeholder="Write a number">
+      <input id="input" class="conatiner__input" type="number" placeholder="Write a number">
       <button class="conatiner__button" type="submit">Submit</button>
    </form>
 
