--- a/js-numerals/numeric-converter-app/views/layouts/main.hbs
+++ b/js-numerals/numeric-converter-app/views/layouts/main.hbs
@@ -16,7 +16,7 @@
 
 <body>
    {{{body}}}
-   <script src="number-converter/converter.js"></script>
+   <script type="module" src="number-converter/converters.js"></script>
 </body>
 
 </html>
