--- a/js-numerals/numeric-converter-app/views/index.hbs
+++ b/js-numerals/numeric-converter-app/views/index.hbs
@@ -1,8 +1,9 @@
 <div class="conatiner">
 
    <form id="form">
-      <input id="input" class="conatiner__input" type="number" placeholder="Write a number">
-      <button class="conatiner__button" type="submit">Submit</button>
+      {{!-- input type can be a number of course but I wanted to include some validation --}}
+      <input id="input" class="container__input" type="text" placeholder="Write a positive/negative number">
+      <button class="container__button" type="submit">Submit</button>
    </form>
 
    <div class="conatiner__number-box" id="nameOfSubmittedNumber"></div>
