--- a/js-numerals/numeric-converter-app/views/layouts/main.hbs
+++ b/js-numerals/numeric-converter-app/views/layouts/main.hbs
@@ -10,8 +10,8 @@
       content="Zajkás Ágoston, portfolio, Budapest, frontend developer, web developer, backend developer, full stack, developer, angular, sass, typescrypt, jQuery, sql, mysql, express, pug, websocket, git, scru, es6+, handlebars, nestjs, nodejs, html, css, javascript, website, webpage, webshop, graphic design, bootstrap, seo, google, services, music, double bass, salesman, linked in, ">
    <meta name="author" content="Agoston ZAJKAS">
    <title>Digital Natives - test</title>
-   <link rel="stylesheet" href="/stylesheets/style.css">
-   {{!-- <link rel="stylesheet" href="/stylesheets/style.min.css"> --}}
+   {{!-- <link rel="stylesheet" href="/stylesheets/style.css"> --}}
+   <link rel="stylesheet" href="/stylesheets/style.min.css">
 </head>
 
 <body>
